caching and loctus profiling completed

--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -7,6 +7,7 @@
 </head>
 <ul>
     <h1> Hello This is Django introduction </h1>
+    <h3>Hii {{name}}</h3>
      {% if single_product %}
         <p>{{single_product.title}}</p>
      {% endif %}
