settings configured for the development and production environment

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,26 +1,16 @@
+{%load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{% static 'core/styles.css' %}">
 </head>
+
 <body>
-
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
-
-    <main>
-        <p>This is a basic HTML5 boilerplate.</p>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 My Website</p>
-    </footer>
-
-    <script src="script.js"></script>
-
+    <div class="homepage"> 
+        <img class="logo" src="{% static 'core/logo.svg' %}">
+    </div>
 </body>
 </html>
